--- a/html/car.html
+++ b/html/car.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
     <script src="https://kit.fontawesome.com/83619e9da4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Carrito.css" />
-    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <link rel="stylesheet" href="../css/car.css" />
+      <link rel="shotcut icon" href="../media/logo-pestaña.png">
     <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
     <title>Carrito</title>
 </head>
@@ -16,20 +16,19 @@
     <header>
         <nav>
             <div class="title-container">
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>LotoCare</h1>
                 </a>
             </div>
             <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
+                <li><a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>                <li><a href="./day-care.html">Productos de día</a></li>
+                <li><a href="./night-care.html">Productos de noche</a></li>
+                <li><a href="./about-us.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
-                <i class="fas fa-user icons"></i>
-                <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
-
+                <a href="./login.html"><i class="fas fa-user icons"></i></a>
+                <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
             <div>
                 <i class="fa-solid fa-bars show"></i>
@@ -45,7 +44,7 @@
             <article class="article-productos">
                 <aside class="limpiador-dia">
                     <div class="img-limpiador-dia">
-                        <img src="./media/limpiador-nochev2.png" alt="limpiador de día" class="img-product-1" />
+                        <img src="../media/limpiador-noche.png" alt="limpiador de día" class="img-product-1" />
                     </div>
                     <div class="texto-limpiador-dia">
                         <p id="texto-h1-limpiador-dia">Limpiador de día <span
@@ -64,7 +63,7 @@
                 </aside>
                 <aside class="limpiador-noche">
                     <div class="img-limpiador-noche">
-                        <img src="./media/crema-nochev2.png" alt="crema de noche" class="img-product-2" />
+                        <img src="../media/crema-noche.png" alt="crema de noche" class="img-product-2" />
                     </div>
                     <div class="texto-limpiador-noche">
                         <p id="texto-h1-limpiador-noche">Crema de noche <span
@@ -110,7 +109,7 @@
                         <input type="radio" id="radio-btn1" name="grupo">
                         <label class="pago-con-tarjeta">Pago con tarjeta</label>
                         <figure>
-                            <img src="./media/metodosPago.png" alt="" id="img-payment-methods">
+                            <img src="../media/metodos-pago.png" alt="" id="img-payment-methods">
                         </figure>
                     </div>
                     <div>
