--- a/html/day-care.html
+++ b/html/day-care.html
@@ -4,39 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styledia.css">
+    <link rel="stylesheet" href="../css/styledia.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
-    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <link rel="shotcut icon" href="../media/logo-pestaña.png">
     <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
     <title>Productos de día</title>
 </head>
-
 <body>
     <header>
         <nav>
             <div class="title-container">
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>LotoCare</h1>
                 </a>
             </div>
-            <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
-            </ul>
-            <div class="icons-container">
-                <i class="fa-solid fa-magnifying-glass icons"></i>
-                <i class="fas fa-user icons"></i>
-               <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
+            <div class="logo-container">
+            <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
             </div>
             <div>
-                <i class="fa-solid fa-bars show"></i>
+            <ul>
+                <li><a href="../html/day-care.html#contact-input">Contacto</a></li>
+                <li><a href="./night-care.html">Productos de noche</a></li>
+                <li><a href="./about-us.html">Nosotros</a></li>
+            </ul>
+            </div>
+            <div class="icons-container">
+                <i class="fa-solid fa-magnifying-glass icons"></i>
+                <a href="./login.html"><i class="fas fa-user icons"></i></a>
+               <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
+            </div>
+            <div class="show">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
     </header>
-
-
     <h1 class="h1-day">
         Rutina de día
     </h1>
@@ -45,25 +46,20 @@
 
     <section class="section-a">
         <figure class="align-figure">
-            <img src="./media/Frame 17.jpg" alt="Limpiador de la marca LotoCare a un precio de 7,95€" class="image-day">
+            <img src="../media/frame17.jpg" alt="Limpiador de la marca LotoCare a un precio de 7,95€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add">
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
-
         </figure>
-
         <article class="text-day">
             <p>Nuestro limpiador facial para el día se caracteriza por su suavidad con  la piel, sin deslipidificar
                 en exceso la piel. su combinación ideal de aceites esenciales y extractos de plantas. Es adecuado
                 para todo tipo de piel y es una excelente base para la aplicación de otros productos de cuidado
                 facial, como cremas hidratantes y serums.</p>
         </article>
-
     </section>
-
     <section class="section-a section-b">
-
         <article class="text-day">
             <p>Nuestro sérum en gel ligero 3 en 1 sintetiza AHA y vitamina C para ayudar a suavizar, aclarar e
                 iluminar la piel en solo 10 días*. Formulado con potentes ingredientes que trabajan juntos para
@@ -73,18 +69,15 @@
                 ayuda a iluminar, fortalecer y proteger la piel. La niacinamida y el ácido fítico equilibran la piel
                 y ayudan a minimizar la apariencia de los poros. Ideal para todo tipo de pieles, incluidas las
                 sensibles. Fragancia y color natural.</p>
-
-
             <p class="info-a">
                 *Basado en un estudio de consumidores de 27 participantes de entre 27 y 55 años.
             </p>
         </article>
-
         <figure class="align-figure">
-            <img src="./media/Frame 18.png" alt="Serum de la marca LotoCare a un precio de 6,75€" class="image-day">
+            <img src="../media/frame18.png" alt="Serum de la marca LotoCare a un precio de 6,75€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add">
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
         </figure>
 
@@ -93,11 +86,11 @@
 
     <section class="section-a">
         <figure class="align-figure">
-            <img src="./media/Frame 19.png" alt="Protector solar de la crema LotoCare a un precio de 6,75€"
+            <img src="../media/frame19.png" alt="Protector solar de la crema LotoCare a un precio de 6,75€"
                 class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add">
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
 
         </figure>
@@ -120,7 +113,7 @@
                 in justo.</p>
         </div>
         <div class="right-div">
-            <div class="input-container">
+            <div class="input-container" id="contact-input">
                 <label for="email">Manténgase en contacto para ofertas, noticias y mucho más</label>
                 <input type="email" id="email" placeholder="    Ingrese su correo electrónico">
                 <button type="submit">Enviar</button>
