--- a/html/singup-form.html
+++ b/html/singup-form.html
@@ -4,32 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../css/form.css">
+     <!--------------- OJO imagen pestaña (modificar) ------------------->
+     <link rel="shotcut icon" href="./media/logo-pestaña.png">
+     <!------------------------------------------------------------------>
     <title>Forulario-Registro</title>
+    <link rel="shotcut icon" href="../media/logo-pestaña.png">
     <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
     <title>Ecommerce Skin Care</title>
 </head>
 
 <body>
-
     <header>
         <nav>
             <div class="title-container">
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>LotoCare</h1>
                 </a>
             </div>
             <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
+                <li> <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
+                <li><a href="./day-care.html">Productos de día</a></li>
+                <li><a href="./night-care.html">Productos de noche</a></li>
+                <li><a href="./about-us.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
-                <i class="fas fa-user icons"></i>
-               <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
+                <a href="./login.html"><i class="fas fa-user icons"></i></a>
+                <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
             <div>
                 <i class="fa-solid fa-bars show"></i>
@@ -37,10 +40,6 @@
         </nav>
     </header>
     <main>
-
-
-
-
         <section class="form-container">
             <form class="form-group">
                 <h2 class="form-title">Formulario Registro</h2>
@@ -69,13 +68,7 @@
                 <input type="submit" class="form-submit" value="Continuar">
             </div>
             </form>
-
-            
-
         </section>
-
-
-
     </main>
     <footer>
         <div class="left-div">
