--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LotoCare</title>
     <!--------------- OJO imagen pestaña (modificar) ------------------->
-    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <link rel="shotcut icon" href="./media/logo-pestaña.png">
     <!------------------------------------------------------------------>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/lightslider.css">
@@ -22,15 +22,15 @@
                 <h1>LotoCare</h1>
             </div>
             <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
+                <li> <a href="index.html"><img src="./media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
+                <li><a href="./html/day-care.html">Productos de día</a></li>
+                <li><a href="./html/night-care.html">Productos de noche</a></li>
+                <li><a href="./html/about-us.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
-                <i class="fas fa-user icons"></i>
-                <i class="fa-solid fa-cart-shopping icons"></i>
+                <a href="./html/login.html"><i class="fas fa-user icons"></i></a>
+                <a href="./html/car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
         </nav>
         <div>
@@ -43,7 +43,7 @@
                
             </div>
             <div class="video-container">
-                <img src="./media/introImg.jpg" alt="Imagen Loto Care" id="start-image" class="video-image">
+                <img src="./media/intro-img.jpg" alt="Imagen Loto Care" id="start-image" class="video-image">
                 <video id="intro-video">
                     <source src="./media/intro.mp4" type="video/mp4">
                     Tu navegador no admite videos HTML5.
@@ -54,7 +54,7 @@
                     <h2 class="right-text">La esencia de la naturaleza<br>en tu piel
                     </h2>
                 </div>
-                <img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo-animation">
+                <img src="./media/logo-g.png" alt="Logo de Lotus Care" class="logo-animation">
             </div>
         </section>
         <div class="lines-container">
@@ -67,7 +67,7 @@
                 <li class="item-a">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/limpiadorDia.png" alt="1">
+                            <img src="./media/sliderImg/limpiadorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -84,7 +84,7 @@
                 <li class="item-b">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/protectorDia.png" alt="1">
+                            <img src="./media/sliderImg/protectorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -101,7 +101,7 @@
                 <li class="item-c">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/serumDia.png" alt="1">
+                            <img src="./media/sliderImg/serumDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Serum Día</a>
                             </div>
@@ -118,7 +118,7 @@
                 <li class="item-d">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/limpiadorNoche.png" alt="1">
+                            <img src="./media/sliderImg/limpiadorNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -135,7 +135,7 @@
                 <li class="item-e">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/cremaNoche.png" alt="1">
+                            <img src="./media/sliderImg/cremaNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -152,7 +152,7 @@
                 <li class="item-f">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/serumNoche.png" alt="1">
+                            <img src="./media/sliderImg/serumNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -169,7 +169,7 @@
                 <li class="item-g">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/limpiadorDia.png" alt="1">
+                            <img src="./media/sliderImg/limpiadorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -186,7 +186,7 @@
                 <li class="item-h">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/SliderImg/protectorDia.png" alt="1">
+                            <img src="./media/sliderImg/protectorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
@@ -205,7 +205,7 @@
         <section class="second-section">
             <div class="image-container">
                 <div class="hover-content">
-                <img src="./media/SliderImg/serumDia.png" alt="Imagen" class="hover-image">
+                <img src="./media/sliderImg/serumDia.png" alt="Imagen" class="hover-image">
                 <div class="hover-text">
                     <h2 class="right-description-title">Dale a tu piel una rutina diaria!</h2>
                     <p class="right-description">Simplifica tu régimen de cuidado de la piel.<br>Con nuestros productos hechos pensando en la piel sensible,<br> nuestros limpiadores y humectantes suaves pero efectivos <br> son la fórmula para una piel sana + equilibrada.<br>LotoCare es un cuidado de la piel sin complicaciones.<br>Siempre ha sido un concepto de menos es más<br>con unenfoque en lo que es esencial para el uso diario.<br>Esta base está entretejida en todo lo que hacemos<br>y lo ha sido desde el primer día.<br>Siempre somosconscientes de eliminar ingredientes,<br>empaques ypasos innecesarios en su régimen</p>
@@ -215,7 +215,7 @@
         <section class="third-section">
             <div class="left-image-container">
               <div class="left-hover-content">
-                <img src="./media/SliderImg/serumNoche.png" alt="Imagen" class="left-hover-image">
+                <img src="./media/sliderImg/serumNoche.png" alt="Imagen" class="left-hover-image">
                 <div class="left-hover-text">
                     <h2 class="left-description-title">Con LotoCare los ácidos son tus amigos</h2>
                     <p class="left-description">Desde hace bastante tiempo, los ácidos han desempeñado<br>un papel principal en el juego del cuidado de la piel,<br> apareciendo en todo, desde las exfoliaciones químicas<br>profesionales realizadas en los consultorios<br>de los dermatólogos hasta los tratamientos específicos para el acné<br>que se encuentran en los estantes de las farmacias e incluso en los humectantes más simples.<br>Si bien están cargados de nombres algo intimidantes,<br>se ha demostrado clínicamente que los ácidos tienen una amplia gama<br> de beneficios para todo tipo de piel, especialmente cuando se formulan y usan adecuadamente.</p>
