--- a/html/night-care.html
+++ b/html/night-care.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styledia.css">
+    <link rel="stylesheet" href="../css/styledia.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
-    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <link rel="shotcut icon" href="../media/logo-pestaña.png">
     <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
     <title>Productos de noche</title>
 </head>
@@ -14,20 +14,20 @@
     <header>
         <nav>
             <div class="title-container">
-                <a href="index.html">
+                <a href="../index.html">
                     <h1>LotoCare</h1>
                 </a>
             </div>
             <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
+                <li> <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
+                <li><a href="./day-care.html">Productos de día</a></li>
+                <li><a href="../html/night-care.html#contact-input">Contacto</a></li>
+                <li><a href="./about-us.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
-                <i class="fas fa-user icons"></i>
-                <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
+                <a href="./login.html"><i class="fas fa-user icons"></i></a>
+                <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
 
             </div>
             <div>
@@ -45,10 +45,10 @@
 
     <section class="section-a">
         <figure class="align-figure">
-            <img src="./media/Frame 20.png" alt="Limpiador de la marca LotoCare a un precio de 7,95€" class="image-day">
+            <img src="../media/frame20.png" alt="Limpiador de la marca LotoCare a un precio de 7,95€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add" >
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
             
         </figure>
@@ -67,10 +67,10 @@
         </article>
 
         <figure class="align-figure">
-            <img src="./media/Frame 21.png" alt="Serum de la marca LotoCare a un precio de 6,75€" class="image-day">
+            <img src="../media/frame21.png" alt="Serum de la marca LotoCare a un precio de 6,75€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add" >
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
         </figure>
 
@@ -79,10 +79,10 @@
 
     <section class="section-a">
         <figure class="align-figure">
-            <img src="./media/Frame 22.png" alt="Protector solar de la crema LotoCare a un precio de 6,75€" class="image-day">
+            <img src="../media/frame22.png" alt="Protector solar de la crema LotoCare a un precio de 6,75€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add" >
-                Añadir a la cesta <img src="./media/Vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
             </button>
 
         </figure>
@@ -101,7 +101,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida felis auctor, ultrices nunc id, aliquet nunc. Sed euismod, nisl a lacinia hendrerit, justo velit aliquam nunc, vitae ultricies velit ex in justo.</p>
     </div>
     <div class="right-div">
-        <div class="input-container">
+        <div class="input-container" id="contact-input">
             <label for="email">Manténgase en contacto para ofertas, noticias y mucho más</label>
             <input type="email" id="email" placeholder="    Ingrese su correo electrónico">
             <button type="submit">Enviar</button>
