Adding responsive button display

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -20,12 +20,16 @@
                 <h1>LotoCare</h1>
             </a>
         </div>
-        <ul>
-          <li><a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
-          <li><a href="../html/day-care.html">Productos de día</a></li>
-          <li><a href="../html/night-care.html">Productos de noche</a></li>
-          <li><a href="../html/about-us.html#contact-input">Contacto</a></li>
-        </ul>
+        <div class="logo-container">
+          <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
+        </div>
+        <div>
+          <ul>
+            <li><a href="../html/day-care.html">Productos de día</a></li>
+            <li><a href="../html/night-care.html">Productos de noche</a></li>
+            <li><a href="../html/about-us.html#contact-input">Contacto</a></li>
+          </ul>
+        </div>
         <div class="icons-container">
             <i class="fa-solid fa-magnifying-glass icons"></i>
             <a href="./login.html"><i class="fas fa-user icons"></i></a>
