--- a/html/login.html
+++ b/html/login.html
@@ -19,19 +19,23 @@
                     <h1>LotoCare</h1>
                 </a>
             </div>
-            <ul>
-                <li> <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./day-care.html">Productos de día</a></li>
-                <li><a href="./night-care.html">Productos de noche</a></li>
-                <li><a href="./about-us.html">Nosotros</a></li>
-            </ul>
+            <div class="logo-container">
+                <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
+            </div>
+            <div>
+                <ul  id="menu-list">
+                    <li><a href="./day-care.html">Productos de día</a></li>
+                    <li><a href="./night-care.html">Productos de noche</a></li>
+                    <li><a href="./about-us.html">Nosotros</a></li>
+                </ul>
+            </div>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <a href="./login.html"><i class="fas fa-user icons"></i></a>
                 <a href="./html/car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
-            <div>
-                <i class="fa-solid fa-bars show"></i>
+            <div class="show">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
     </header>
@@ -87,7 +91,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="../scripts/script.js"></script>
 </body>
 
 </html>
