--- a/html/night-care.html
+++ b/html/night-care.html
@@ -10,7 +10,6 @@
     <title>Productos de noche</title>
 </head>
 <body>
-  
     <header>
         <nav>
             <div class="title-container">
@@ -18,21 +17,24 @@
                     <h1>LotoCare</h1>
                 </a>
             </div>
+            <div class="logo-container">
+                <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
+            </div>
+            <div>
             <ul>
-                <li> <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
                 <li><a href="./day-care.html">Productos de día</a></li>
                 <li><a href="../html/night-care.html#contact-input">Contacto</a></li>
                 <li><a href="./about-us.html">Nosotros</a></li>
             </ul>
+            </div>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <a href="./login.html"><i class="fas fa-user icons"></i></a>
                 <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
-
             </div>
-            <div>
-                <i class="fa-solid fa-bars show"></i>
-            </div>
+             <div class="show">
+                <i class="fa-solid fa-bars"></i>
+            </div>   
         </nav>
     </header>
     
