--- a/html/singup-form.html
+++ b/html/singup-form.html
@@ -23,19 +23,23 @@
                     <h1>LotoCare</h1>
                 </a>
             </div>
-            <ul>
-                <li> <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./day-care.html">Productos de día</a></li>
-                <li><a href="./night-care.html">Productos de noche</a></li>
-                <li><a href="./about-us.html">Nosotros</a></li>
-            </ul>
+            <div class="logo-container">
+                <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="./day-care.html">Productos de día</a></li>
+                    <li><a href="./night-care.html">Productos de noche</a></li>
+                    <li><a href="./about-us.html">Nosotros</a></li>
+                </ul>
+            </div>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <a href="./login.html"><i class="fas fa-user icons"></i></a>
                 <a href="./car.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
-            <div>
-                <i class="fa-solid fa-bars show"></i>
+            <div class="show">
+                <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
     </header>
