Fixing header urls

--- a/html/day-care.html
+++ b/html/day-care.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <div class="title-container">
+            <div class="title-container" style="width:50px" margin="auto">
                 <a href="../index.html">
                     <h1>LotoCare</h1>
                 </a>
