--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>LotoCare</h1>
             </div>
             <div class="logo-container">
-                <a href="../index.html"><img src="../media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
+                <a href="./index.html"><img src="./media/logo-g.png" alt="Logo de Lotus Care" class="logo"></a>
             </div>
             <div>
                 <ul>
