fixing bugs in urls

--- a/html/day-care.html
+++ b/html/day-care.html
@@ -82,8 +82,7 @@
                 régimen sin complicaciones. Una mezcla de 6% de ácido glicólico y 2% de ácido láctico ayuda a
                 mejorar la textura y reducir el exceso de grasa, mientras que la vitamina C estabilizada al 2%
                 ayuda a iluminar, fortalecer y proteger la piel. La niacinamida y el ácido fítico equilibran la piel
-                y ayudan a minimizar la apariencia de los poros. Ideal para todo tipo de pieles, incluidas las
-                sensibles. Fragancia y color natural.</p>
+                y ayudan a minimizar la apariencia de los poros. Ideal para todo tipo de pieles. Fragancia y color natural.</p>
             <p class="info-a">
                 *Basado en un estudio de consumidores de 27 participantes de entre 27 y 55 años.
             </p>
