--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <img src="./media/slider-img/serum-noche.png" alt="Imagen" class="left-hover-image">
                 <div class="left-hover-text">
                     <h2 class="left-description-title">Con LotoCare los ácidos son tus amigos</h2>
-                    <p class="left-description">Desde hace bastante tiempo, los ácidos han desempeñado<br>un papel principal en el juego del cuidado de la piel,<br> apareciendo en todo, desde las exfoliaciones químicas<br>profesionales realizadas en los consultorios<br>de los dermatólogos hasta los tratamientos específicos para el acné<br>que se encuentran en los estantes de las farmacias e incluso en los humectantes más simples.<br>Si bien están cargados de nombres algo intimidantes,<br>se ha demostrado clínicamente que los ácidos tienen una amplia gama<br> de beneficios para todo tipo de piel, especialmente cuando se formulan y usan adecuadamente.</p>
+                    <p class="left-description">Desde hace bastante tiempo, los ácidos han desempeñado<br>un papel principal en el juego del cuidado de la piel,<br> apareciendo en todo, desde las exfoliaciones químicas<br>profesionales realizadas en los consultorios<br>de los dermatólogos hasta los tratamientos específicos para el acné<br>que se encuentran en los estantes de las farmacias e incluso en <br>los humectantes más simples.Si bien están <br>cargados de nombres algo intimidantes,<br>se ha demostrado clínicamente que los ácidos tienen una amplia gama<br> de beneficios para todo tipo de piel, especialmente cuando se formulan <br>y usan adecuadamente.</p>
                 </div>
               </div>
             </div>
