--- a/html/night-care.html
+++ b/html/night-care.html
@@ -98,7 +98,7 @@
             <img src="../media/frame22.png" alt="Protector solar de la crema LotoCare a un precio de 6,75€" class="image-day">
             <br> <!--hay otra manera?-->
             <button type="button" class="button-add" >
-                Añadir a la cesta <img src="../media/vector.png" alt="Vector de cesta de compra">
+                Añadir a la cesta <img src="../media/vector.png" alt="Vector imagen para cesta de compra">
             </button>
 
         </figure>
